--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ psycopg2-binary = "*"
 requests = "*"
 jsonfield = "*"
 django-extensions = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
